# Frida-Injector-Android

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Icon.h  Loader.cpp
app/src/main/cpp/Activity/: Activity.cpp  Activity.h
app/src/main/cpp/Base64/: Base64.cpp  Base64.h
app/src/main/cpp/DRM/: DRM.cpp  DRM.h
app/src/main/cpp/Deauther/: Deauther.cpp  Deauther.h
app/src/main/cpp/HttpURLConnection/: HttpURLConnection.cpp  HttpURLConnection.h
app/src/main/cpp/JSONObject/: JSONObject.cpp  JSONObject.h
app/src/main/cpp/Jasypt/: Jasypt.cpp  Jasypt.h
app/src/main/cpp/Layout/: Layout.cpp  Layout.h
app/src/main/cpp/LoginInterface/: LoginInterface.cpp  LoginInterface.h
app/src/main/cpp/RSA/: RSA.cpp  RSA.h
app/src/main/cpp/RootManager/: RootManager.cpp  RootManager.h
app/src/main/cpp/SharedPreferences/: SharedPreferences.cpp  SharedPreferences.h
app/src/main/cpp/Utils/: obfuscate.h
app/src/main/java/gamingbd/pro/: CustomAdapter.java  FloatingViewService.java  ListApplication.java  Loader.java  LoginActivity.java  Native.java  NetworkRequest.java  Utils.java
app/src/main/res/layout/: activity_list_application.xml  activity_main.xml  sample_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
